# contextualized-carbon

./: .gitignore  .prettierignore  Dockerfile  README.md  SOURCES.md  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: envirofacts_pipeline.yaml  envirofacts_pipeline.yml  gce.yaml  update_gce.yml
client/: .env.development  Dockerfile  package-lock.json  package.json
client/public/: index.html  manifest.json
client/reverse-proxy/: nginx.default.conf
client/src/: App.css  App.tsx  config.ts
client/src/api/: api.ts  base.ts  configuration.ts  index.ts
client/src/components/: ButtonCard.tsx  CompanyDropdown.tsx  CompanyEmissionInfo.tsx  NavBar.tsx  Sidebar.tsx  YearDropdown.tsx
client/src/hooks/: useWorstOffender.tsx
csvdata/: envirofacts_data.csv
docker-compose/: docker-compose.dev.yml  docker-compose.prod.yml
emissions_bot/: __init__.py  app.py  companies.py
emissions_bot/api/: app.py  schemas.py
emissions_bot/carbon_conversion/: fact_template.py
emissions_bot/database/: __init__.py  models.py
emissions_bot/db_setup/: __init__.py  pull_companies.py
emissions_bot/envirofacts/: __init__.py  query.py
google/compute/: instance-startup.sh
openapi/: generate.sh  openapi.json
server/: Dockerfile  pyproject.toml
server/api/: __init__.py  api.py  app.py  schemas.py
server/api/facts/: __init__.py  instances.py  quantity.py  shuffle.py  template.py  units.py
server/db/: __init__.py  company_names.py  connection.py  initalization.py  instance.py  models.py  secrets.py
server/db/envirofacts/: __init__.py  query.py
server/emissions_bot/api/: app.py
server/emissions_bot/database/: __init__.py  initalization.py
src/emissions_bot/: envirofacts.py
