[tool.poetry]
name = "emissions-bot"
version = "0.0.1"
description = ""
authors = ["Craig Fiedorek <rcraigfiedorek@gmail.com>"]
license = "GPLv3"
readme = "README.md"
packages = [{include = "emissions_bot"}]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"
requests = "^2.28.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
autopep8 = "^2.0.0"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
