[tool.poetry]
name = "emissions-bot-server"
version = "0.0.1"
description = ""
authors = ["Craig Fiedorek <rcraigfiedorek@gmail.com>"]
packages = [
    { include = "api" },
    { include = "db" },
]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^1.5.1"
requests = "^2.28.1"
apiflask = "1.1.2"
flask-sqlalchemy = "^3.0.2"
gunicorn = "^20.1.0"
cloud-sql-python-connector = {extras = ["pg8000"], version = "^0.9.3"}
cleanco = "^2.2"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.0"
autopep8 = "^2.0.0"
jupyter = "^1.0.0"
flake8 = "^5.0.4"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.autopep8]
max_line_length = 120
